a11y-keyboard: Clarify notifications

When activating a11y features via the keyboard, the labels
of the notifications were a little out of touch with the
interaction we wanted to have with the user.

Make those notifications clearer, by stating the current state,
as well as the target state if dismissed.

https://bugzilla.gnome.org/show_bug.cgi?id=655493